syntax = "proto3";

option go_package = "grpc_dhs/proto";

service PredictionService {
    rpc Predict (PredictionRequest) returns (PredictionResponse) {}
}

message PredictionRequest {
    string bento = 1;
    string o_id = 2;
    string opportunity_id = 3;
}

message PredictionResponse {
    string prediction = 1;
    double prediction_probability = 2;
}